tests/garbagedb5-result.txt
tests/garbagedb5:41: parser error : Opening and ending tag mismatch: rot line 41 and root
20:29">unknown</user></editor><template created-on="2005-05-06 09:20:29"/></root
                                                                               ^
error: file error failed to parse xml document 'tests/garbagedb5'.
error: (null)
